--- a/public/style.css
+++ b/public/style.css
@@ -10,5 +10,13 @@ body {
   justify-content: center;
 
   /* This centers our sketch vertically. */
-  align-items: center;
+}
+
+.colorBox{
+	margin: 4px;
+	width: 50px;
+	height: 50px;
+	border: 2px solid black;
+	text-align: center;
+	font-size: 40px;
 }
